--- a/templates/home.html
+++ b/templates/home.html
@@ -181,7 +181,7 @@
         aria-expanded="false"
       >
         <img src="{{ url_for('static', filename='images/user/avatar-2.jpg') }}" alt="user-image" class="user-avtar">
-        <span>Stebin Ben</span>
+        <span>{{ user.get_username() }}</span>
       </a>
       <div class="dropdown-menu dropdown-user-profile dropdown-menu-end pc-h-dropdown">
         <div class="dropdown-header">
@@ -190,8 +190,8 @@
               <img src="{{ url_for('static', filename='images/user/avatar-2.jpg') }}" alt="user-image" class="user-avtar wid-35">
             </div>
             <div class="flex-grow-1 ms-3">
-              <h6 class="mb-1">Stebin Ben</h6>
-              <span>Administrator</span>
+              <h6 class="mb-1"> {{ user.get_username() }} </h6>
+              <span> {{ user.get_job() }} </span>
             </div>
             <a href="#!" class="pc-head-link bg-transparent"><i class="ti ti-power text-danger"></i></a>
           </div>
