--- a/templates/login.html
+++ b/templates/login.html
@@ -70,7 +70,7 @@
         </div>
 
         <!-- form start -->
-        <div class="card my-5">
+        <form method="POST" action="/login" class="card my-5">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-end mb-4">
               <h3 class="mb-0"><b>Login</b></h3>
@@ -78,24 +78,24 @@
             </div>
             <div class="form-group mb-3">
               <label class="form-label">Email Address</label>
-              <input type="email" class="form-control" placeholder="Email Address">
+              <input type="email" class="form-control" name='email' placeholder="Email Address">
             </div>
             <div class="form-group mb-3">
               <label class="form-label">Password</label>
-              <input type="password" class="form-control" placeholder="Password">
+              <input type="password" class="form-control" name='password' placeholder="Password">
             </div>
             <div class="d-flex mt-1 justify-content-between">
               <div class="form-check">
-                <input class="form-check-input input-primary" type="checkbox" id="customCheckc1" checked="">
+                <input class="form-check-input input-primary" type="checkbox" id="customCheckc1" checked="" name="remember">
                 <label class="form-check-label text-muted" for="customCheckc1">Keep me sign in</label>
               </div>
               <h5 class="text-secondary f-w-400">Forgot Password?</h5>
             </div>
             <div class="d-grid mt-4">
-              <button type="button" class="btn btn-primary">Login</button>
+              <button type="submit" class="btn btn-primary">Login</button>
             </div>
           </div>
-        </div>
+        </form>
         <div class="auth-footer row">
           <!-- <div class=""> -->
             <div class="col my-1">
