--- a/templates/register.html
+++ b/templates/register.html
@@ -69,8 +69,7 @@
         </div>
 
         <!-- form start -->
-        <form method="POST" action="/register">
-          <div class="card my-5">
+        <form method="POST" action="/register" class="card my-5">
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-end mb-4">
                 <h3 class="mb-0"><b>Sign up</b></h3>
@@ -89,7 +88,6 @@
                 <button type="submit" class="btn btn-primary">Create Account</button>
               </div>
             </div>
-          </div>
         </form>
         <div class="auth-footer row">
           <!-- <div class=""> -->
