--- a/templates/home.html
+++ b/templates/home.html
@@ -180,14 +180,14 @@
         data-bs-auto-close="outside"
         aria-expanded="false"
       >
-        <img src="{{ url_for('static', filename='images/user/avatar-2.jpg') }}" alt="user-image" class="user-avtar">
+        <img src="{{ url_for('static', filename=user.profile_picture) }}" alt="user-image" class="user-avtar">
         <span>{{ user.get_username() }}</span>
       </a>
       <div class="dropdown-menu dropdown-user-profile dropdown-menu-end pc-h-dropdown">
         <div class="dropdown-header">
           <div class="d-flex mb-1">
             <div class="flex-shrink-0">
-              <img src="{{ url_for('static', filename='images/user/avatar-2.jpg') }}" alt="user-image" class="user-avtar wid-35">
+              <img src="{{ url_for('static', filename=user.profile_picture) }}" alt="user-image" class="user-avtar wid-35">
             </div>
             <div class="flex-grow-1 ms-3">
               <h6 class="mb-1"> {{ user.get_username() }} </h6>
