--- a/templates/login.html
+++ b/templates/login.html
@@ -74,7 +74,7 @@
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-end mb-4">
               <h3 class="mb-0"><b>Login</b></h3>
-              <a href="#" class="link-primary">Don't have an account?</a>
+              <a href="{{ url_for('register') }}" class="link-primary">Don't have an account?</a>
             </div>
             <div class="form-group mb-3">
               <label class="form-label">Email Address</label>
