--- a/templates/login.html
+++ b/templates/login.html
@@ -53,3 +53,6 @@
 </div>
 <!-- [ Main Content ] end -->
 {% endblock %}
+{% block footer %}
+<!-- Override footer block to nothing -->
+{% endblock %}
