--- a/templates/home.html
+++ b/templates/home.html
@@ -1,260 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<!-- [Head] start -->
+{% extends "base.html" %}
 
-<head>
-  <title>Home | Epicare-Admin Dashboard</title>
-  <!-- [Meta] -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <!-- <meta name="description" content="Mantis is made using Bootstrap 5 design framework. Download the free admin template & use it for your project.">
-  <meta name="keywords" content="Mantis, Dashboard UI Kit, Bootstrap 5, Admin Template, Admin Dashboard, CRM, CMS, Bootstrap Admin Template">
-  <meta name="author" content="CodedThemes"> -->
+{% block title %}Dashboard{% endblock %}
 
-  <!-- [Favicon] icon -->
-  <link rel="icon" href="{{ url_for('static', filename = 'images/favicon.svg') }}" type="image/x-icon"><!-- [Google Font] Family -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700&display=swap" id="main-font-link">
-  <!-- [Tabler Icons] https://tablericons.com -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='fonts/tabler-icons.min.css') }}" >
-  <!-- [Feather Icons] https://feathericons.com -->
-  <!-- [Feather Icons] -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='fonts/feather.css') }}">
+{% block scripts %}
+<!-- [Page Specific JS] start -->
 
-  <!-- [Font Awesome Icons] -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='fonts/fontawesome.css') }}">
+<script src="{{ url_for('static', filename='js/plugins/apexcharts.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/pages/dashboard-default.js') }}"></script>
+{% endblock %}
 
-  <!-- [Material Icons] -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='fonts/material.css') }}">
-
-  <!-- [Template CSS Files] -->
-  <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/style-preset.css') }}"> -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" id="main-style-link">
-
-</head>
-<!-- [Head] end -->
-<!-- [Body] Start -->
-
-<body data-pc-preset="preset-1" data-pc-direction="ltr" data-pc-theme="light">
-  <!-- [ Pre-loader ] start -->
-<div class="loader-bg">
-  <div class="loader-track">
-    <div class="loader-fill"></div>
-  </div>
-</div>
-<!-- [ Pre-loader ] End -->
- <!-- [ Sidebar Menu ] start -->
-<nav class="pc-sidebar">
-  <div class="navbar-wrapper">
-    <div class="m-header">
-      <h3>
-      <a href="{{ url_for('home') }}" class="b-brand text-primary">
-          <!-- ========   Change your logo from here   ============ -->
-          <span class="fw-bolder text-primary">Epicare</span>
-      </a>
-      </h3>
-    </div>
-    <div class="navbar-content">
-      <ul class="pc-navbar">
-        <li class="pc-item {% if request.endpoint == 'home' %}active{% endif %}">
-          <a href="{{ url_for('home') }}" class="pc-link">
-            <span class="pc-micon"><i class="ti ti-dashboard"></i></span>
-            <span class="pc-mtext">Dashboard</span>
-          </a>
-        </li>
-        <li class="pc-item pc-hasmenu">
-          <a href="#!" class="pc-link"><span class="pc-micon"><i class="ti ti-menu"></i></span><span class="pc-mtext">Users</span><span class="pc-arrow"><i data-feather="chevron-right"></i></span></a>
-          <ul class="pc-submenu">
-            <li class="pc-item {% if request.endpoint == 'user-pwid' %}active{% endif %}">
-              <a class="pc-link" href="{{ url_for('user_pwid') }}">PWIDs</a>
-            </li>
-            <li class="pc-item {% if request.endpoint == 'user-caretaker' %}active{% endif %}">
-              <a href="{{ url_for('user_caretaker') }}" class="pc-link">Caretakers</a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-<!-- [ Sidebar Menu ] end --> <!-- [ Header Topbar ] start -->
-<header class="pc-header">
-  <div class="header-wrapper"> <!-- [Mobile Media Block] start -->
-<div class="me-auto pc-mob-drp">
-  <ul class="list-unstyled">
-    <!-- ======= Menu collapse Icon ===== -->
-    <li class="pc-h-item pc-sidebar-collapse">
-      <a href="#" class="pc-head-link ms-0" id="sidebar-hide">
-        <i class="ti ti-menu-2"></i>
-      </a>
-    </li>
-    <li class="pc-h-item pc-sidebar-popup">
-      <a href="#" class="pc-head-link ms-0" id="mobile-collapse">
-        <i class="ti ti-menu-2"></i>
-      </a>
-    </li>
-  </ul>
-</div>
-<!-- [Mobile Media Block end] -->
-<div class="ms-auto">
-  <ul class="list-unstyled">
-    <li class="dropdown pc-h-item">
-      <a
-        class="pc-head-link dropdown-toggle arrow-none me-0"
-        data-bs-toggle="dropdown"
-        href="#"
-        role="button"
-        aria-haspopup="false"
-        aria-expanded="false"
-      >
-        <i class="ti ti-bell"></i>
-        <span class="badge bg-success pc-h-badge">3</span>
-      </a>
-      <div class="dropdown-menu dropdown-notification dropdown-menu-end pc-h-dropdown">
-        <div class="dropdown-header d-flex align-items-center justify-content-between">
-          <h5 class="m-0">Notification</h5>
-          <a href="#!" class="pc-head-link bg-transparent"><i class="ti ti-circle-check text-success"></i></a>
-        </div>
-        <div class="dropdown-divider"></div>
-        <div class="dropdown-header px-0 text-wrap header-notification-scroll position-relative" style="max-height: calc(100vh - 215px)">
-          <div class="list-group list-group-flush w-100">
-            <a class="list-group-item list-group-item-action">
-              <div class="d-flex">
-                <div class="flex-shrink-0">
-                  <div class="user-avtar bg-light-success"><i class="ti ti-gift"></i></div>
-                </div>
-                <div class="flex-grow-1 ms-1">
-                  <span class="float-end text-muted">3:00 AM</span>
-                  <p class="text-body mb-1">It's <b>Cristina danny's</b> birthday today.</p>
-                  <span class="text-muted">2 min ago</span>
-                </div>
-              </div>
-            </a>
-            <a class="list-group-item list-group-item-action">
-              <div class="d-flex">
-                <div class="flex-shrink-0">
-                  <div class="user-avtar bg-light-primary"><i class="ti ti-message-circle"></i></div>
-                </div>
-                <div class="flex-grow-1 ms-1">
-                  <span class="float-end text-muted">6:00 PM</span>
-                  <p class="text-body mb-1"><b>Aida Burg</b> commented your post.</p>
-                  <span class="text-muted">5 August</span>
-                </div>
-              </div>
-            </a>
-            <a class="list-group-item list-group-item-action">
-              <div class="d-flex">
-                <div class="flex-shrink-0">
-                  <div class="user-avtar bg-light-danger"><i class="ti ti-settings"></i></div>
-                </div>
-                <div class="flex-grow-1 ms-1">
-                  <span class="float-end text-muted">2:45 PM</span>
-                  <p class="text-body mb-1">Your Profile is Complete &nbsp;<b>60%</b></p>
-                  <span class="text-muted">7 hours ago</span>
-                </div>
-              </div>
-            </a>
-            <a class="list-group-item list-group-item-action">
-              <div class="d-flex">
-                <div class="flex-shrink-0">
-                  <div class="user-avtar bg-light-primary"><i class="ti ti-headset"></i></div>
-                </div>
-                <div class="flex-grow-1 ms-1">
-                  <span class="float-end text-muted">9:10 PM</span>
-                  <p class="text-body mb-1"><b>Cristina Danny </b> invited to join <b> Meeting.</b></p>
-                  <span class="text-muted">Daily scrum meeting time</span>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-      </div>
-    </li>
-    <li class="dropdown pc-h-item header-user-profile">
-      <a
-        class="pc-head-link dropdown-toggle arrow-none me-0"
-        data-bs-toggle="dropdown"
-        href="#"
-        role="button"
-        aria-haspopup="false"
-        data-bs-auto-close="outside"
-        aria-expanded="false"
-      >
-        <img src="{{ url_for('static', filename=user.profile_picture) }}" alt="user-image" class="user-avtar">
-        <span>{{ user.get_username() }}</span>
-      </a>
-      <div class="dropdown-menu dropdown-user-profile dropdown-menu-end pc-h-dropdown">
-        <div class="dropdown-header">
-          <div class="d-flex mb-1">
-            <div class="flex-shrink-0">
-              <img src="{{ url_for('static', filename=user.profile_picture) }}" alt="user-image" class="user-avtar wid-35">
-            </div>
-            <div class="flex-grow-1 ms-3">
-              <h6 class="mb-1"> {{ user.get_username() }} </h6>
-              <span> {{ user.get_job() }} </span>
-            </div>
-            <a href="#!" class="pc-head-link bg-transparent"><i class="ti ti-power text-danger"></i></a>
-          </div>
-        </div>
-        <ul class="nav drp-tabs nav-fill nav-tabs" id="mydrpTab" role="tablist">
-          <li class="nav-item" role="presentation">
-            <button
-              class="nav-link active"
-              id="drp-t1"
-              data-bs-toggle="tab"
-              data-bs-target="#drp-tab-1"
-              type="button"
-              role="tab"
-              aria-controls="drp-tab-1"
-              aria-selected="true"
-              ><i class="ti ti-user"></i>Profile</button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button
-              class="nav-link"
-              id="drp-t2"
-              data-bs-toggle="tab"
-              data-bs-target="#drp-tab-2"
-              type="button"
-              role="tab"
-              aria-controls="drp-tab-2"
-              aria-selected="false"
-              ><i class="ti ti-settings"></i> Setting</button
-            >
-          </li>
-        </ul>
-        <div class="tab-content" id="mysrpTabContent">
-          <div class="tab-pane fade show active" id="drp-tab-1" role="tabpanel" aria-labelledby="drp-t1" tabindex="0">
-            <a href="#!" class="dropdown-item">
-              <i class="ti ti-edit-circle"></i>
-              <span>Edit Profile</span>
-            </a>
-            <a href="#!" class="dropdown-item">
-              <i class="ti ti-power"></i>
-              <span>Logout</span>
-            </a>
-          </div>
-          <div class="tab-pane fade" id="drp-tab-2" role="tabpanel" aria-labelledby="drp-t2" tabindex="0">
-            <a href="#!" class="dropdown-item">
-              <i class="ti ti-help"></i>
-              <span>Support</span>
-            </a>
-            <a href="#!" class="dropdown-item">
-              <i class="ti ti-user"></i>
-              <span>Account Settings</span>
-            </a>
-          </div>
-        </div>
-      </div>
-    </li>
-  </ul>
-</div>
- </div>
-</header>
-<!-- [ Header ] end -->
-
-
-
+{% block content %}
   <!-- [ Main Content ] start -->
   <div class="pc-container">
     <div class="pc-content">
@@ -563,59 +318,4 @@
     </div>
   </div>
   <!-- [ Main Content ] end -->
-  <footer class="pc-footer">
-    <div class="footer-wrapper container-fluid">
-      <div class="row">
-        <div class="col-sm my-1">
-          <p class="m-0">© 2025 Epicare, last updated 30 July 2025</p>
-        </div>
-        <div class="col-auto my-1">
-          <ul class="list-inline footer-link mb-0">
-            <li class="list-inline-item"><a href="{{ url_for('home') }}">Home</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </footer>
-
-  <!-- [Page Specific JS] start -->
-
-<script src="{{ url_for('static', filename='js/plugins/apexcharts.min.js') }}"></script>
-<script src="{{ url_for('static', filename='js/pages/dashboard-default.js') }}"></script>
-
-<!-- [Required JS] -->
-<script src="{{ url_for('static', filename='js/plugins/popper.min.js') }}"></script>
-<script src="{{ url_for('static', filename='js/plugins/simplebar.min.js') }}"></script>
-<script src="{{ url_for('static', filename='js/plugins/bootstrap.min.js') }}"></script>
-<script src="{{ url_for('static', filename='js/fonts/custom-font.js') }}"></script>
-<script src="{{ url_for('static', filename='js/pcoded.js') }}"></script>
-<script src="{{ url_for('static', filename='js/plugins/feather.min.js') }}"></script>
-
-
-  
-  
-  
-  
-  <script>layout_change('light');</script>
-  
-  
-  
-  
-  <script>change_box_container('false');</script>
-  
-  
-  
-  <script>layout_rtl_change('false');</script>
-  
-  
-  <script>preset_change("preset-1");</script>
-  
-  
-  <script>font_change("Public-Sans");</script>
-  
-    
-
-</body>
-<!-- [Body] end -->
-
-</html>
+{% endblock %}
