--- a/templates/register.html
+++ b/templates/register.html
@@ -47,3 +47,6 @@
 </div>
   <!-- [ Main Content ] end -->
 {% endblock %}
+{% block footer %}
+<!-- Override footer block to nothing -->
+{% endblock %}
