--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -149,7 +149,7 @@
               <h6 class="mb-1"> {{ user.get_username() }} </h6>
               <span> {{ user.get_job() }} </span>
             </div>
-            <a href="#!" class="pc-head-link bg-transparent"><i class="ti ti-power text-danger"></i></a>
+            <a href="{{ url_for('logout') }}" class="pc-head-link bg-transparent"><i class="ti ti-power text-danger"></i></a>
           </div>
         </div>
         <ul class="nav drp-tabs nav-fill nav-tabs" id="mydrpTab" role="tablist">
@@ -185,7 +185,7 @@
               <i class="ti ti-edit-circle"></i>
               <span>Edit Profile</span>
             </a>
-            <a href="#!" class="dropdown-item">
+            <a href="{{ url_for('logout') }}" class="dropdown-item">
               <i class="ti ti-power"></i>
               <span>Logout</span>
             </a>
