--- a/templates/check-mail.html
+++ b/templates/check-mail.html
@@ -20,7 +20,7 @@
             <p class="text-muted">We have sent a password recover instructions to your email.</p>
           </div>
           <div class="d-grid mt-3">
-            <button type="button" class="btn btn-primary">Sign in</button>
+            <a href="{{ url_for('login') }}"><button type="button" class="btn btn-primary">Sign in</button></a>
           </div>
         </div>
       </div>
