--- a/templates/login.html
+++ b/templates/login.html
@@ -34,7 +34,7 @@
               <input class="form-check-input input-primary" type="checkbox" id="customCheckc1" checked="" name="remember">
               <label class="form-check-label text-muted" for="customCheckc1">Keep me sign in</label>
             </div>
-            <h5 class="text-secondary f-w-400">Forgot Password?</h5>
+            <a href="{{ url_for('forgot_password') }}"><h5 class="text-secondary f-w-400">Forgot Password?</h5></a>
           </div>
           <div class="d-grid mt-4">
             <button type="submit" class="btn btn-primary">Login</button>
