--- a/templates/register.html
+++ b/templates/register.html
@@ -19,7 +19,7 @@
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-end mb-4">
               <h3 class="mb-0"><b>Sign up</b></h3>
-              <a href="#" class="link-primary">Already have an account?</a>
+              <a href="{{ url_for('login') }}" class="link-primary">Already have an account?</a>
             </div>
             <div class="form-group mb-3">
               <label class="form-label" for="email">Email Address*</label>
