--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -195,9 +195,9 @@
               <i class="ti ti-help"></i>
               <span>Support</span>
             </a>
-            <a href="#!" class="dropdown-item">
+            <a href="{{ url_for('delete_account') }}" class="dropdown-item">
               <i class="ti ti-user"></i>
-              <span>Account Settings</span>
+              <span>Delete Account</span>
             </a>
           </div>
         </div>
